services.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-auth-service
spec:
  selector:
    app: k8s-auth
  ports: 
  - port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-users-service
spec:
  selector:
    app: k8s-users
  ports:
  - port: 3001
    targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: grpc
spec:
  selector:
    app: k8s-users
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
