ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  labels:
    name: auth-ingress
spec:
  rules:
  -  http:
      paths:
      - pathType: Prefix
        path: "/api/auth"
        backend:
          service:
            name: k8s-auth-service
            port: 
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-ingress
  # annotations:  
  #   nginx.ingress.kubernetes.io/auth-url: http://k8s-auth-service.default.svc.cluster.local:3000/api/auth/error
  labels:
    name: users-ingress
spec:
  rules:
  -  http:
      paths:
      - pathType: Prefix
        path: "/api/users"
        backend:
          service:
            name: k8s-users-service
            port: 
              number: 3001
